cloudformation/10-cfn-init/1-ec2-user-data.yaml
Parameters:
  KeyName:
    Description: Name of an existing EC2 key pair for SSH access to the EC2 instance.
    Type: AWS::EC2::KeyPair::KeyName

  SSHLocation:
    Description: The IP address range that can be used to SSH to the EC2 instances 
    Type: String
    MinLength: '9'    
    MaxLength: '18'
    Default: 0.0.0.0/0
    AllowedPattern: "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,3})"
    ConstraintDescription: must be a valid IP CIDR range of the form x.x.x.x/x 

  ImageId:
    Type: AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>
    Default: /aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2

Resources:
  WebServer:
    Type: AWS::EC2::Instance 
    Properties:
      ImageId: !Ref ImageId
      InstanceType: t2.micro
      KeyName: !Ref KeyName 
      SecurityGroups:
        - !Ref WebServerSecurityGroup 
      UserData::
        Fn::Base64: |
          #!/bin/base 
          yum update -y
          amazon-linux-extras install -y lamp-maridadb10.2-php7.2 php7.2 
          yum install -y http mariadb-server 
          systemctl start httpd 
          systemctl enable httpd 
          usermod -a -G apache ec2-user 
          chown -R ec2-user:apache /var/www 
          chomod 2775 /var/www 
          find /var/www -type d -exec sudo chmod 2775 {} \;
          find /var/www -type f -exec sudo chmod 0664 {} \;
          echo "<?php phpinfo(); ?>" > /var/www/html/phpinfo.php 

  WebServerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: "Enable HTTP access via port 80 + ssh access"  
      SecurityGroupIngress: 
        - CidrIp: 0.0.0.0/0
          FromPort: 80
          ToPort: 80
          IpProtocol: tcp
        - CidrIp: !Ref SSHLocation 
          FromPort: 22
          ToPort: 22
          IpProtocol: tcp
